foreign-language-reader/dictionary-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dictionary-service
spec:
  selector:
    matchLabels:
      app: dictionary
  replicas: 1
  template:
    metadata:
      labels:
        app: dictionary
    spec:
      containers:
      - name: dictionary-service
        image: gcr.io/foreign-language-reader/dictionary-service:1.05
        ports:
        - containerPort: 8000
