foreign-language-reader/dictionary-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dictionary-service
spec:
  type: NodePort
  selector:
    app: dictionary
  ports:
    - port: 8000
