foreign-language-reader/stemming-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stemming-service
spec:
  type: NodePort
  selector:
    app: stemming
  ports:
    - port: 8000
